--- a/blog/content/docs/plugins.adoc
+++ b/blog/content/docs/plugins.adoc
@@ -311,3 +311,58 @@ layout: roq-default/default
 search: false
 ---
 ----
+
+[#plugin-diagram]
+== Roq Plugin Diagram
+
+If you're using ROQ you already know that documentation-as-code will soon rule the world, and you probably also know diagram-as-code is its little brother.
+
+The diagram as code helps you use almost every diagram-as-code language by leveraging _**Kroki.io**_.
+
+It delegates image rendering to *_Kroki_* either by using a provided server or by popping a dev service.
+
+Please take a look at https://kroki.io/[the full reference documentation].
+
+To install it, you will to do the following:
+
+. Add the plugin:
++
+[source,shell]
+----
+quarkus ext add quarkus-roq-plugin-diagram
+----
+. Use it in your content:
++
+[source,html]
+----
+\{#diagram asciidoc=true language="pikchr" alt="Impossible trident", width=500 height=500 diagramOutputFormat="svg"}
+
+scale = 1.0
+eh = 0.5cm
+ew = 0.2cm
+ed = 2 * eh
+er = 0.4cm
+lws = 4.0cm
+lwm = lws + er
+lwl = lwm + er
+
+ellipse height eh width ew
+L1: line width lwl from last ellipse.n
+line width lwm from last ellipse.s
+LV: line height eh down
+
+move right er down ed from last ellipse.n
+ellipse height eh width ew
+L3: line width lws right from last ellipse.n to LV.end then down eh right ew
+line width lwm right from last ellipse.s then to LV.start
+
+move right er down ed from last ellipse.n
+ellipse height eh width ew
+line width lwl right from last ellipse.n then to L1.end
+line width lwl right from last ellipse.s then up eh
+\{/}
+----
+
+You can either use a deployed server or let the dev services provide one for you, but in this case you won't have https://hub.docker.com/r/yuzutech/kroki[all languages available].
+
+Just try it, you'll see what it does.
