--- a/blog/content/docs/advanced.adoc
+++ b/blog/content/docs/advanced.adoc
@@ -468,24 +468,6 @@ public class RoqSiteTest {
     public void testIndex() {
         RestAssured.when().get("/")
                 .then()
-                .statusCode(200);
-    }
-}
-----
-
-=== Content Detail Test Example
-To go even further, you can test the actual content details of your generated site. The RestAssured port will automatically use the Roq static server. Here's how:
-
-[source,java]
-----
-@QuarkusTest
-@RoqAndRoll
-public class RoqSiteTest {
-
-    @Test
-    public void testIndex() {
-        RestAssured.when().get("/")
-                .then()
                 .statusCode(200)
                 .body(containsString(
                     "Ready to Roq my world!"
@@ -493,6 +475,8 @@ public class RoqSiteTest {
     }
 }
 ----
+
+The RestAssured port will automatically use the Roq static server, running on port 8082 by default.
 
 == Updating Roq
 
