Mix of small fixes for asciidoc and add toc script

--- a/blog/content/docs/_includes/directory-structure.adoc
+++ b/blog/content/docs/_includes/directory-structure.adoc
@@ -1,7 +1,7 @@
 == Directory Structure
 
 The default directory structure is:
-[source, text]
+[source]
 ----
 my-site/
 ├── data/                                // <1>
