--- a/blog/content/docs/_includes/attributes.adoc
+++ b/blog/content/docs/_includes/attributes.adoc
@@ -1,8 +1,9 @@
-:toc: macro
-:toc-title: Contents
+:tocnav:
+:toctitle: Contents
 :sectanchors: true
-:toclevels: 1
+:toclevels: 2
 :idprefix:
 :idseparator: -
-:page-layout: doc-jruby
+:page-layout: doc
 :imagesdir: {site-path}images/docs
+:roqjavadocmodelurl: https://javadoc.io/doc/io.quarkiverse.roq/quarkus-roq-frontmatter/latest/io/quarkiverse/roq/frontmatter/runtime/model/
