--- a/blog/content/docs/_includes/configs/quarkus-roq-plugin-asciidoc_quarkus.asciidoc.adoc
+++ b/blog/content/docs/_includes/configs/quarkus-roq-plugin-asciidoc_quarkus.asciidoc.adoc
@@ -7,9 +7,9 @@ h|[.header-title]##Configuration property##
 h|Type
 h|Default
 
-a|icon:lock[title=Fixed at build time] [[quarkus-roq-plugin-asciidoc_quarkus-asciidoc-escape]] [.property-path]##link:#quarkus-roq-plugin-asciidoc_quarkus-asciidoc-escape[`quarkus.asciidoc.escape`]##
+a|icon:lock[title=Fixed at build time] [[quarkus-roq-plugin-asciidoc_quarkus-asciidoc-qute]] [.property-path]##link:#quarkus-roq-plugin-asciidoc_quarkus-asciidoc-qute[`quarkus.asciidoc.qute`]##
 ifdef::add-copy-button-to-config-props[]
-config_property_copy_button:+++quarkus.asciidoc.escape+++[]
+config_property_copy_button:+++quarkus.asciidoc.qute+++[]
 endif::add-copy-button-to-config-props[]
 
 
@@ -17,20 +17,20 @@ endif::add-copy-button-to-config-props[]
 --
 Controls whether all AsciiDoc templates should be parsed by Qute.
 
-When set to `true`, Qute will not parse AsciiDoc files, except those that have the `:page-escape: false` attribute in their header.
+When set to `true`, Qute will parse AsciiDoc files. Files with the `:qute:` attribute in their header will override this config.
 
 By default, Qute parsing is disabled for AsciiDoc templates.
 
 
 ifdef::add-copy-button-to-env-var[]
-Environment variable: env_var_with_copy_button:+++QUARKUS_ASCIIDOC_ESCAPE+++[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_ASCIIDOC_QUTE+++[]
 endif::add-copy-button-to-env-var[]
 ifndef::add-copy-button-to-env-var[]
-Environment variable: `+++QUARKUS_ASCIIDOC_ESCAPE+++`
+Environment variable: `+++QUARKUS_ASCIIDOC_QUTE+++`
 endif::add-copy-button-to-env-var[]
 --
 |boolean
-|`true`
+|`false`
 
 |===
 
