--- a/blog/content/posts/2024-12-06-series/index.adoc
+++ b/blog/content/posts/2024-12-06-series/index.adoc
@@ -18,7 +18,7 @@ This is as simple as adding a `series` attribute to the front matter of your pos
  <dependency>
     <groupId>io.quarkiverse.roq</groupId>
     <artifactId>quarkus-roq-plugin-series</artifactId>
-    <version>$\{quarkus-roq.version}</version>
+    <version>${quarkus-roq.version}</version>
 </dependency>
 ----
 
@@ -31,9 +31,9 @@ This is as simple as adding a `series` attribute to the front matter of your pos
 layout: theme-layouts/roq-default/post
 ---
 
-\{#include partials/roq-series /} <1>
+{#include partials/roq-series /} <1>
 
-\{#insert /} <2>
+{#insert /} <2>
 ----
 <1> This will add the series partial before the post content, if it’s declared.
 <2> This is the post content.
