--- a/blog/content/docs/advanced.adoc
+++ b/blog/content/docs/advanced.adoc
@@ -501,6 +501,22 @@ $ quarkus update
 This will update the Quarkus version and extensions (including Roq) and make sure they are compatible together.
 
 
+=== Version migration guide
+
+==== Updating to Roq 1.7.0
+
+By re-implementing Asciidoc support, you may need to check a few things when updating:
+
+* Asciidoc files (.adoc and .asciidoc) will be escaped by default meaning no Qute parsing. Instead, it is possible to use asciidoc includes and vars instead (can be configured through `quarkus.asciidoc.qute=false`).
+* Config renamed `quarkus.asciidoctorj` -> `quarkus.asciidoc` (this is to be able to switch from one to the other asciidoc plugin)
+* `quarkus.asciidoc.qute` (instead of `quarkus.asciidoc.escape` in 1.7.0.CR1)
+* `:qute:` or `:qute: true` to enable Qute parsing per page
+* Remove config `quarkus.asciidoctorj.templates-dir` (toc can be handled by script).
+
+Search has also been improved:
+
+* Make sure your style is still valid with the new search result dom.
+
 == Site Configuration
 
 Site configuration is done in `config/application.properties` (or `src/main/resources/application.properties`):
