--- a/docs/modules/ROOT/pages/_includes/quarkus-roq-plugin-asciidoc_quarkus.asciidoc.adoc
+++ b/docs/modules/ROOT/pages/_includes/quarkus-roq-plugin-asciidoc_quarkus.asciidoc.adoc
@@ -30,7 +30,7 @@ Environment variable: `+++QUARKUS_ASCIIDOC_QUTE+++`
 endif::add-copy-button-to-env-var[]
 --
 |boolean
-|`false`
+|`+++false+++`
 
 |===
 
