--- a/docs/modules/ROOT/pages/_includes/quarkus-roq-plugin-tagging.adoc
+++ b/docs/modules/ROOT/pages/_includes/quarkus-roq-plugin-tagging.adoc
@@ -26,7 +26,7 @@ Environment variable: `+++QUARKUS_ROQ_TAGGING_LOWERCASE+++`
 endif::add-copy-button-to-env-var[]
 --
 |boolean
-|`false`
+|`+++false+++`
 
 |===
 
